# infra.rs

./: .cspell.json  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONFIG_SUMMARY.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  STATUS.md  TODO.md  TOPO.md  clippy.toml  deny.toml  flake.nix  manifest  package.json  rustfmt.toml  shell.nix  starship.toml
apps/marketd/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
apps/marketd/docs/: README.md
apps/marketd/src/: composition.rs  main.rs
apps/marketd/tests/: process_checkpoint_restart.rs
crates/bootstrap/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/bootstrap/docs/: API.md  README.md  标准.md
crates/bootstrap/examples/: minimal.rs
crates/bootstrap/releases/: 0.3.2.md  README.md
crates/bootstrap/src/: bounded.rs  contract_store_set.rs  drain.rs  error.rs  lib.rs  store_set.rs  traits.rs
crates/bootstrap/tests/: public_api.rs  public_api_surface.rs  storage_composition_e2e.rs
crates/configx/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/configx/docs/: API.md  README.md  标准.md
crates/configx/examples/: basic.rs
crates/configx/releases/: round-03-2026-07-23.md
crates/configx/src/: diff.rs  layered.rs  lib.rs  secret.rs  source.rs  view.rs  watch.rs
crates/configx/tests/: concurrency.rs  public_api.rs
crates/contracts/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/contracts/benches/: hot_path.rs
crates/contracts/docs/: API.md  L3_FIRST_BATCH_STATUS.md  README.md  标准.md
crates/contracts/examples/: fake_surface.rs
crates/contracts/releases/: 0.1.2.md
crates/contracts/review/: README.md
crates/contracts/src/: error.rs  exchange.rs  fakes.rs  instrumentation.rs  lib.rs  live.rs  storage.rs  venue_gate.rs
crates/contracts/tests/: conformance_first_batch.rs  live_contracts.rs  public_api_surface.rs  public_surface.rs  venue_override_gate.rs
crates/domain_exchange/: Cargo.toml  README.md
crates/domain_exchange/docs/: README.md
crates/domain_exchange/src/: lib.rs
crates/domain_exchange/tests/: cap_err_page.rs  mock_lifecycle.rs
crates/domain_market/: Cargo.toml  README.md
crates/domain_market/docs/: README.md
crates/domain_market/src/: book.rs  lib.rs  time.rs
crates/domain_market/tests/: env_typed.rs  serde_and_time.rs
crates/domainx/: Cargo.toml  README.md
crates/domainx/docs/: README.md
crates/domainx/src/: lib.rs  validate.rs
crates/domainx/tests/: comp_fixtures.rs  serde_fixtures.rs
crates/evidence/: CHANGELOG.md  Cargo.toml  README.md
crates/evidence/docs/: API.md  README.md  标准.md
crates/evidence/examples/: append_file.rs  append_memory.rs
crates/evidence/review/: README.md
crates/evidence/src/: inspect.rs  lib.rs  policy.rs  query.rs  remote.rs
crates/evidence/tests/: public_api.rs
crates/exchange/hyperliquid/: Cargo.toml
crates/exchange/okx/: Cargo.toml
crates/infra-core/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/infra-core/src/: error.rs  lib.rs
crates/infra-core/tests/: error_serde.rs
crates/infra/evidence/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/infra/observex/: AGENTS.md  Cargo.toml  README.md
crates/kernel/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/kernel/benches/: hot_path.rs
crates/kernel/docs/: API.md  README.md  标准.md  需求标准.md
crates/kernel/examples/: basic.rs
crates/kernel/releases/: 0.3.0-internal.md  0.3.1-internal.md
crates/kernel/src/: clock.rs  error.rs  lib.rs  lifecycle.rs
crates/kernel/tests/: api_compile.rs  clock_contract.rs  lifecycle_concurrency.rs  lifecycle_concurrency_loom.rs  public_api.rs  public_api_surface.rs
crates/market_data/: Cargo.toml  README.md
crates/market_data/docs/: API.md  README.md
crates/market_data/src/: lib.rs
crates/observex/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/observex/benches/: hot_path.rs
crates/observex/docs/: API.md  README.md  标准.md
crates/observex/examples/: counting.rs  trace_events.rs
crates/observex/releases/: README.md  round-02.md
crates/observex/src/: export.rs  lib.rs  ops.rs  policy.rs  surface.rs
crates/observex/tests/: public_api.rs
crates/resiliencx/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/resiliencx/benches/: hot_path.rs
crates/resiliencx/docs/: API.md  README.md  标准.md
crates/resiliencx/examples/: retry_async_demo.rs  retry_sync.rs
crates/resiliencx/releases/: README.md  round-03-2026-07-23.md
crates/resiliencx/src/: budget.rs  bulkhead.rs  circuit.rs  lib.rs  rate_limit.rs  retry.rs
crates/resiliencx/tests/: public_api.rs  public_api_surface.rs  retry_async_contract.rs  retry_contract.rs
crates/schedulex/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/schedulex/benches/: hot_path.rs
crates/schedulex/docs/: API.md  README.md  标准.md
crates/schedulex/examples/: bulk_registry.rs  registry_only.rs
crates/schedulex/releases/: 0.1.2.md
crates/schedulex/src/: bulk.rs  id.rs  job.rs  lib.rs  runner.rs  schedule.rs  stats.rs
crates/schedulex/tests/: job_runner_public.rs  public_api.rs
crates/test-support/contracts/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/testkit/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/testkit/benches/: hot_path.rs
crates/testkit/docs/: API.md  README.md  标准.md
crates/testkit/examples/: basic.rs
crates/testkit/releases/: 0.1.3-internal.md
crates/testkit/src/: clock.rs  harness.rs  lib.rs
crates/testkit/tests/: api_compile.rs  harness_fail_closed.rs  manual_clock_concurrency.rs  manual_clock_contract.rs  (+3 more)
crates/transport/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
tools/archgate/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
tools/evidence-cli/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
tools/goalctl/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
tools/oss-verify/: Cargo.toml
tools/schema_codegen/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
tools/verifyctl/: Cargo.toml  README.md
tools/xtask/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
(+2211 files in other folders)
