[workspace]
resolver = "2"
members = [
  "crates/kernel",
  "crates/testkit",
  "crates/configx",
  "crates/schedulex",
  "crates/types/decimal",
  "crates/types/canonical",
  "crates/resiliencx",
  "crates/contracts",
  "crates/bootstrap",
  "crates/observex",
  "crates/transport",
  "crates/adapters/exchange/binance",
  "crates/adapters/exchange/okx",
  "crates/adapters/storage/redis",
  "crates/adapters/storage/kafka",
  "crates/adapters/storage/nats",
  "crates/adapters/storage/postgres",
  "crates/adapters/storage/taos",
  "crates/adapters/storage/oss",
  "crates/adapters/storage/clickhouse",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/xhyperium/infra.rs"
rust-version = "1.85"

[workspace.dependencies]
# 共享依赖（按需在各 crate 中引用）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
# contracts（R4 白名单）
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
# transport / async
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

# SPEC-KERNEL-002 §4：crate 可通过 [lints] workspace = true 继承
# 默认保持 warn 级，避免拖垮兄弟 crate；各 crate 可再加严
# loom：kernel 在 RUSTFLAGS='--cfg loom' 下构建；check-cfg 对其它 crate 无害
[workspace.lints.rust]
unused_must_use = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
