[workspace]
resolver = "2"
members = [
  "crates/kernel",
  "crates/testkit",
  "crates/configx",
  "crates/schedulex",
  "crates/types/decimal",
  "crates/types/canonical",
  "crates/resiliencx",
  "crates/contracts",
  "crates/test-support/contracts",
  "crates/evidence",
  "crates/bootstrap",
  "crates/observex",
  "crates/transport",
  "crates/adapters/exchange/binance",
  "crates/adapters/exchange/okx",
  "crates/adapters/storage/redis",
  "crates/adapters/storage/kafka",
  "crates/adapters/storage/nats",
  "crates/adapters/storage/postgres",
  "crates/adapters/storage/taos",
  "crates/adapters/storage/oss",
  "crates/adapters/storage/clickhouse",
  "tools/goalctl",
  "tools/verifyctl",
]

[workspace.package]
# 项目/编排版本（CHANGELOG）；crates/** 禁止 version.workspace = true，须独立 version（见 docs/governance/VERSIONING.md R-C1）
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/xhyperium/infra.rs"
rust-version = "1.85"

[workspace.dependencies]
# 共享依赖（按需在各 crate 中引用）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
# contracts（R4 白名单）
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
# transport / async
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "io-util",
  "net",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
redis = { version = "0.27", default-features = false, features = [
  "tokio-comp",
  "connection-manager",
  "tokio-rustls-comp",
  "tls-rustls-webpki-roots",
  "cluster-async",
  "sentinel",
] }
url = "2"
# TLS (postgresx SSL require; redisx/natsx 共用)
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "tls12",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
  "ring",
  "tls12",
] }
rustls-pki-types = "1"
rustls-pemfile = "2"
webpki-roots = "0.26"
# storage adapters (production drivers)
tokio-postgres = { version = "0.7", default-features = false, features = [
  "runtime",
  "with-chrono-0_4",
] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
# 纯 Rust Kafka 客户端（无 librdkafka / libsasl2 系统依赖）
rskafka = { version = "0.6", default-features = false, features = [
  "compression-gzip",
  "compression-lz4",
  "compression-snappy",
  "compression-zstd",
  "transport-tls",
] }
async-nats = "0.50"
clickhouse = { version = "0.13", default-features = false, features = [
  "time",
  "uuid",
] }
# tools
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
hex = "0.4"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
# crypto / encoding（exchange + oss 签名）
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
# test / bench / loom（R-DEP-004：成员禁止内联 version）
proptest = "1"
static_assertions = "1"
bigdecimal = "0.4"
criterion = { version = "0.5", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "std",
  "fmt",
  "registry",
] }
loom = "0.7"

# SPEC-KERNEL-002 §4：crate 可通过 [lints] workspace = true 继承
# 默认保持 warn 级，避免拖垮兄弟 crate；各 crate 可再加严
# loom：kernel 在 RUSTFLAGS='--cfg loom' 下构建；check-cfg 对其它 crate 无害
[workspace.lints.rust]
unused_must_use = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
