[package]
name = "contracts"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
description = "契约层 trait 出口，Additive Only（spec §4.3，R4）"
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "contracts"

[dependencies]
kernel = { path = "../kernel", version = "0.3.1" }
canonical = { path = "../types/canonical", version = "0.1.2" }
async-trait = { workspace = true }
bytes = { workspace = true }
futures-core = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
contract-testkit = { path = "../test-support/contracts", version = "0.1.3" }
async-trait = { workspace = true }
binancex = { path = "../adapters/exchange/binance", version = "0.3.2" }
decimalx = { path = "../types/decimal", version = "0.1.2" }
futures-core = { workspace = true }
okxx = { path = "../adapters/exchange/okx", version = "0.3.3" }
tokio = { workspace = true }

[[bench]]
name = "hot_path"
harness = false
