[package]
name = "domain_exchange"
description = "Exchange domain model: VenueAdapter trait, StreamType, OrderAmend, AccountInfo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "domain_exchange"

[dependencies]
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
domainx = { path = "../domainx", version = "0.1.0" }
domain_market = { path = "../domain_market", version = "0.1.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json = { workspace = true }

[lints]
workspace = true
