[package]
name = "domain_market"
description = "Market data domain model: Tick, Quote, Bar, OrderBook, and canonical types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "domain_market"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
domainx = { path = "../domainx", version = "0.1.0" }

[lints]
workspace = true
