[package]
name = "domainx"
description = "Domain shared value objects: Order, Position, Trade, Portfolio, and shared enums"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "domainx"

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
