[package]
name = "infra-core"
description = "infra.rs 核心基础设施库"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror = { workspace = true }

[dev-dependencies]
serde_json.workspace = true
