[package]
name = "xhyper-kernel"
description = "infra.rs L0 kernel: opaque XError/ErrorKind, Clock/Timestamp, ShutdownSignal (SPEC-KERNEL-002)"
version = "0.3.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[lib]
name = "kernel"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde = { workspace = true }
static_assertions = { workspace = true }

[features]
default = []

[lints]
workspace = true

[[bench]]
name = "hot_path"
harness = false
