[package]
name = "market_data"
description = "market_data.rs L0 kernel: market data model, canonical types, and core abstractions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "market_data"

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]

[features]
default = []

[lints]
workspace = true
