[package]
name = "observex"
version = "0.1.1"
publish = false
edition.workspace = true
rust-version.workspace = true
description = "L1 tracing/metrics + OTEL-compatible in-process export surface"
license.workspace = true
repository.workspace = true

[lib]
name = "observex"

[dependencies]
# SPEC §2：kernel 依赖信封（预留，当前热路径不引用）
kernel = { path = "../kernel", version = "0.3.0" }
# package contracts · lib name contracts
contracts = { path = "../contracts", version = "0.1.1" }
tracing = { workspace = true }

[dev-dependencies]
# 捕获 tracing 事件字段（测试合同）
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "std",
  "fmt",
  "registry",
] }

[features]
default = []

[lints]
workspace = true

[[bench]]
name = "hot_path"
harness = false
