[package]
name = "resiliencx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "L1 弹性：重试 + 熔断 + 限流 + 舱壁（无墙钟；ADR-005）"
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "resiliencx"

[dependencies]
# path + version：满足 cargo-deny bans.wildcards=deny
kernel = { path = "../kernel", version = "0.3.0" }
contracts = { path = "../contracts", version = "0.1.0" }

[lints]
workspace = true

[[bench]]
name = "hot_path"
harness = false
