[package]
name = "resiliencx"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
description = "L1 еј№жҖ§пјҡйҮҚиҜ• + йў„з®— + зҶ”ж–ӯ + йҷҗжөҒ + иҲұеЈҒпјҲж— еўҷй’ҹпјӣADR-005пјү"
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "resiliencx"

[features]
default = []
## еҗҜз”Ё [`TokioSleepWait`]пјҲйқһйҳ»еЎһ `tokio::time::sleep`пјү
tokio = ["dep:tokio"]

[dependencies]
# path + versionпјҡж»Ўи¶і cargo-deny bans.wildcards=deny
kernel = { path = "../kernel", version = "0.3.0" }
contracts = { path = "../contracts", version = "0.1.2" }
async-trait = { workspace = true }
tokio = { workspace = true, optional = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[lints]
workspace = true

[[bench]]
name = "hot_path"
harness = false
