[package]
name = "resiliencx"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
description = "L1 弹性：重试 + 预算 + 熔断 + 限流 + 舱壁（无墙钟；ADR-005）"
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "resiliencx"

[features]
default = []
## 启用 [`TokioSleepWait`]（非阻塞 `tokio::time::sleep`）
tokio = ["dep:tokio"]

[dependencies]
# path + version：满足 cargo-deny bans.wildcards=deny
kernel = { package = "xhyper-kernel", path = "../kernel", version = "0.3.1" }
contracts = { path = "../contracts", version = "0.1.4" }
async-trait = { workspace = true }
tokio = { workspace = true, optional = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[lints]
workspace = true

[[bench]]
name = "hot_path"
harness = false
