[package]
name = "schedulex"
version = "0.1.3"
publish = false
edition.workspace = true
rust-version.workspace = true
description = "L1 task-id registry + deterministic JobRunner (tick-driven; minimal cron)"
license.workspace = true
repository.workspace = true

[lib]
name = "schedulex"

# active SSOT: std-only，无生产依赖
[dependencies]

[dev-dependencies]

[features]
default = []

[lints]
workspace = true

[[bench]]
name = "hot_path"
harness = false
