[package]
name = "xhyper-testkit"
version = "0.1.1"
publish = false
edition.workspace = true
rust-version.workspace = true
description = "T0 deterministic test support (ManualClock; SPEC-TESTKIT-002)"
license.workspace = true
repository.workspace = true

[lib]
name = "testkit"

[dependencies]
xhyper-kernel = { path = "../kernel", version = "0.3.0" }

[dev-dependencies]
proptest = "1"

[features]
default = []
