[package]
name = "testkit"
version = "0.1.1"
publish = false
edition.workspace = true
rust-version.workspace = true
description = "T0 deterministic test support (ManualClock; SPEC-TESTKIT-002)"
license.workspace = true
repository.workspace = true

[lib]
name = "testkit"

[dependencies]
kernel = { path = "../kernel", version = "0.3.0" }

[dev-dependencies]
proptest = "1"
static_assertions = "1"

[features]
# SPEC-TESTKIT-002 §5.2 / §24.2：无 feature；显式 default=[] 满足字面合同
default = []
