[package]
name = "transportx"
version = "0.1.4"
publish = false
edition.workspace = true
rust-version.workspace = true
description = "L1 HTTP/WS transport with TLS mode, client pool, and proxy config"
license.workspace = true
repository.workspace = true

[lib]
name = "transportx"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
httpdate = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
tokio-tungstenite = { workspace = true }
kernel = { package = "xhyper-kernel", path = "../kernel", version = "0.3.1" }

[dev-dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "time",
  "sync",
] }
tokio-tungstenite = { workspace = true }
kernel = { package = "xhyper-kernel", path = "../kernel", version = "0.3.1" }

[features]
default = []

[lints]
workspace = true

[[bench]]
name = "hot_path"
harness = false
