[package]
name = "xhyper-schema-codegen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "从 schemas/ 生成 Rust 类型"
license.workspace = true
repository.workspace = true
publish = false


[[bin]]
name = "schema_codegen"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }