[package]
name = "xhyper-xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "xhyper.rs 内部工具链：lint-deps / 后续 release / gen-docs"
license.workspace = true
repository.workspace = true
publish = false


[[bin]]
name = "xtask"
path = "src/main.rs"
[dependencies]
cargo_metadata = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
tempfile = { workspace = true }
toml = { version = "1.1.3", default-features = false, features = ["std", "serde", "parse"] }

[dev-dependencies]
tempfile = { workspace = true }
libc = "0.2"
