[package]
name = "exchange-hyperliquid"
description = "Hyperliquid exchange adapter for market_data.rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "exchange_hyperliquid"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
domainx = { path = "../../domainx", version = "0.1.0" }
domain_market = { path = "../../domain_market", version = "0.1.0" }
domain_exchange = { path = "../../domain_exchange", version = "0.1.0" }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
