[package]
name = "evidence"
version = "0.1.1"
publish = false
edition.workspace = true
rust-version.workspace = true
description = "L1 审计证据：追加 / 查询 / HMAC 签名 / 可注入远程传输"
license.workspace = true
repository.workspace = true

[lib]
name = "evidence"

[dependencies]
# 签名 wire：workspace sha2（HMAC 自实现，无 hmac crate）
sha2 = { workspace = true }

[features]
default = []

[lints]
workspace = true

[[bench]]
name = "hot_path"
harness = false
