[package]
name = "observex"
version = "0.1.2"
publish = false
edition.workspace = true
rust-version.workspace = true
description = "L1 tracing/metrics 与有界进程内遥测 sink"
license.workspace = true
repository.workspace = true

[lib]
name = "observex"

[dependencies]
# SPEC §2：kernel 依赖信封（预留，当前热路径不引用）
kernel = { path = "../../kernel", version = "0.3.1" }
# package contracts · lib name contracts
contracts = { path = "../../contracts", version = "0.1.4" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# 捕获 tracing 事件字段（测试合同）
tracing-subscriber = { workspace = true }

[features]
default = []

[lints]
workspace = true

[[bench]]
name = "hot_path"
harness = false
