[package]
name = "xhyper-canonical"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "/types/ 跨层共享纯 DTO（ADR-001）；Money 复用 decimalx"
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "canonical"

[dependencies]
xhyper-decimalx = { path = "../decimal" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
