[package]
name = "canonical"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "/types/ 跨层共享纯 DTO（ADR-001）；Money 复用 decimalx"
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "canonical"

[dependencies]
# path + version：满足 cargo-deny bans.wildcards=deny（禁止裸 path 通配依赖）
decimalx = { path = "../decimal", version = "0.1.0" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
